dsadasda :D:DDDD HAhahahah afunny

--- a/styleOfLogin.css
+++ b/styleOfLogin.css
@@ -32,22 +32,37 @@ h1 {
   height: 40px;
   width: 100%;
 }
-.loginbox input[type="submit"] {
-  padding: 14px 20px;
+.createAccount {
+  border: none;
+  outline: none;
+  position: relative;
+  cursor: pointer;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-family: sans-serif;
+  font-style: normal;
+  background: #0980cd;
+  font-weight: 550;
+  font-size: 15px;
+  line-height: 14px;
+  color: white;
+  letter-spacing: 1.2px;
+  word-spacing: 2px;
 }
 .info {
   font-weight: bold;
   padding: 15px 0px 5px 0px;
+  font-size: 15px;
 }
 
-.createAccount, .LogIn {
-    outline:auto
+.createAccount,
+.LogIn {
+  outline: auto;
 }
-.input[type="checkbox"]{
-    display: flex;
-}
-.checkbox {
-display: flex;
 
-
+.business,
+.title {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
