--- a/styleOfLogin.css
+++ b/styleOfLogin.css
@@ -10,22 +10,27 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 340px;
+  width: 485px;
   background: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  padding: 97px 80.5px 50px 80.5px;
+  padding: 15px;
 }
 .logo {
   padding-top: 25px;
   width: 145px;
-  margin: 10px;
-  background-color: white;
-  mix-blend-mode: multiply;
+  margin-bottom: 10px;
+}
+.znaky {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  gap: 10px;
 }
 h1 {
   font: size 30px;
   font-weight: 700;
+  text-transform: lowercase;
 }
 .loginbox input[type="text"],
 input[type="password"] {
@@ -33,6 +38,7 @@ input[type="password"] {
   border: 1px solid #bfbfbf;
   height: 40px;
   width: 100%;
+  padding-right:0px;
 }
 
 .loginbox input[type="checkbox"] {
@@ -40,7 +46,6 @@ input[type="password"] {
   border: 1px solid #bfbfbf;
   width: 45px;
   height: 30px;
-  margin-right: 12px;
   align-items: flex-start;
   margin-left: 2px;
 }
@@ -77,6 +82,7 @@ input[type="password"] {
 .checkbox {
   margin: 25px 0 25px 2px;
   align-self: flex-start;
+  gap: 12px;
 }
 .terms {
   font-size: 14px;
@@ -86,3 +92,31 @@ input[type="password"] {
   word-spacing: 3px;
   text-align: left;
 }
+
+.LogIn {
+  border: none;
+  outline: none;
+  position: relative;
+  cursor: pointer;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-family: sans-serif;
+  font-style: normal;
+  background: rgba(207, 19, 34, 0.8);
+  border-radius: 5px;
+  font-weight: 550;
+  font-size: 15px;
+  line-height: 14px;
+  color: white;
+  letter-spacing: 1.2px;
+  word-spacing: 2px;
+  display:block;
+  text-decoration: none;
+  text-align: center;
+}
+form {
+  flex-direction: column;
+  display: flex;
+  padding: 65px 65px 35px 65px;
+}
+
