--- a/styleOfLogin.css
+++ b/styleOfLogin.css
@@ -1,7 +1,29 @@
+@font-face {
+  font-family: workSans;
+  src: url(../assets/WorkSans-Bold.ttf);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: workSans;
+  src: url(../assets/WorkSans-Regular.ttf);
+}@font-face {
+    font-family: workSans;
+    src: url(../assets/WorkSans-Bold.ttf);
+    font-weight: bold;
+  }
+
+  @font-face {
+    font-family: workSans;
+    src: url(../assets/WorkSans-Regular.ttf);
+  }
+
+
+
 body {
   flex-direction: column;
   background-color: #fafcff;
-  font-family: sans-serif;
+  font-family: workSans;
   display: flex;
   align-items: center;
   padding-bottom: 50px;
@@ -56,7 +78,7 @@ input[type="password"] {
   cursor: pointer;
   padding-top: 15px;
   padding-bottom: 15px;
-  font-family: sans-serif;
+  font-family: workSans;
   font-style: normal;
   background: #0980cd;
   border-radius: 5px;
@@ -100,7 +122,7 @@ input[type="password"] {
   cursor: pointer;
   padding-top: 15px;
   padding-bottom: 15px;
-  font-family: sans-serif;
+  font-family: workSans;
   font-style: normal;
   background: rgba(207, 19, 34, 0.8);
   border-radius: 5px;
