--- a/styleOfLogin.css
+++ b/styleOfLogin.css
@@ -54,8 +54,7 @@ h1 {
   font-weight: 700;
   text-transform: lowercase;
 }
-.loginbox input[type="text"],
-input[type="password"] {
+.loginbox input {
   border-radius: 5px;
   border: 1px solid #bfbfbf;
   height: 40px;
@@ -91,6 +90,7 @@ input[type="password"] {
 }
 .info {
   font-weight: bold;
+  color: black;
   padding: 15px 0px 5px 0px;
   font-size: 15px;
 }
@@ -143,20 +143,47 @@ form {
 }
 input{
   position: relative;
+  padding-left: 10px;
+ margin-top:5px;
 }
-.inputWithButton{
- 
+.input-control{
+ padding-top:20px;
   position:relative;
-
+  
 }
-.inputWithButton button{
+.input-control.error{
+  padding-top:20px;
+   position:relative;
+   
+ }
+
+.input-control button{
   position: absolute;
   border: none;
   background: none;
-  right: 10px;
-  top: 10px; 
+  right: 0px;
+  top: 43px; 
+  bottom:0px;
+ 
+}
+.error button{
+  position: absolute;
+  border: none;
+  background: none;
+  right: 0px;
+  top: 24px; 
+  bottom:0px;
+ 
 }
 .znaky button{
   border: none;
   background: none;
+  padding: 0px;
+}
+.error input  {
+  border: 1px solid #CF1322;
+}
+.error {
+  padding-top:5px;
+  color: #CF1322;
 }
