--- a/styleOfLogin.css
+++ b/styleOfLogin.css
@@ -7,19 +7,22 @@
 @font-face {
   font-family: workSans;
   src: url(../assets/WorkSans-Regular.ttf);
-}@font-face {
-    font-family: workSans;
-    src: url(../assets/WorkSans-Bold.ttf);
-    font-weight: bold;
-  }
+}
+@font-face {
+  font-family: workSans;
+  src: url(../assets/WorkSans-Bold.ttf);
+  font-weight: bold;
+}
 
-  @font-face {
-    font-family: workSans;
-    src: url(../assets/WorkSans-Regular.ttf);
-  }
+@font-face {
+  font-family: workSans;
+  src: url(../assets/WorkSans-Regular.ttf);
+}
 
-
-
+.requirements {
+  position: absolute;
+  padding-left: 3.35px;
+}
 body {
   flex-direction: column;
   background-color: #fafcff;
@@ -37,6 +40,7 @@ body {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   padding: 15px;
+  align-items: center;
 }
 .logo {
   padding-top: 25px;
@@ -50,25 +54,33 @@ body {
   gap: 10px;
 }
 h1 {
-  font: size 30px;
+  font-size: 30px;
   font-weight: 700;
   text-transform: lowercase;
+  margin-top: 5px;
+  
 }
 .loginbox input {
   border-radius: 5px;
   border: 1px solid #bfbfbf;
-  height: 40px;
+  height: 38px;
   width: 100%;
-  padding-right:0px;
+  padding: 0px;
 }
-
+.checkbox {
+  margin: 25px 0 25px 2px;
+  display: grid;
+  grid-template-columns: 35px auto;
+  width: 100%;
+}
 .loginbox input[type="checkbox"] {
   border-radius: 5px;
   border: 1px solid #bfbfbf;
-  width: 45px;
-  height: 30px;
-  align-items: flex-start;
-  margin-left: 2px;
+  width: 20.31px;
+  height: 20.31px;
+  margin-top: 0px;
+  margin-right: 12.34px;
+  grid-column: 1;
 }
 .createAccount {
   border: none;
@@ -89,10 +101,11 @@ h1 {
   word-spacing: 2px;
 }
 .info {
-  font-weight: bold;
+  font-weight: 600;
   color: black;
   padding: 15px 0px 5px 0px;
   font-size: 15px;
+
 }
 
 .business,
@@ -100,18 +113,14 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin: 5px auto 0px auto;
 }
-.checkbox {
-  margin: 25px 0 25px 2px;
-  align-self: flex-start;
-  gap: 12px;
-}
+
 .terms {
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
-  letter-spacing: 0.15;
-  word-spacing: 3px;
+  letter-spacing: 0.15px;
   text-align: left;
 }
 
@@ -132,49 +141,47 @@ h1 {
   color: white;
   letter-spacing: 1.2px;
   word-spacing: 2px;
-  display:block;
+  display: block;
   text-decoration: none;
   text-align: center;
 }
 form {
   flex-direction: column;
   display: flex;
-  padding: 65px 65px 35px 65px;
+  width: 325px;
+  padding: 60px 65px 35px 65px;
 }
-input{
+input {
   position: relative;
-  padding-left: 10px;
- margin-top:5px;
+  margin-top: 5px;
 }
-.input-control{
- padding-top:20px;
-  position:relative;
-  
+.input-control {
+  padding-top: 15px;
+  position: relative;
 }
-.input-control.error{
-  padding-top:20px;
-   position:relative;
-   
- }
+.input-control.error {
+  padding-top: 20px;
+  position: relative;
+}
 
-.input-control button{
+.input-control button {
   position: absolute;
   border: none;
   background: none;
   right: 0px;
-  top: 54px; 
-  
+  top: 48px;
 }
 
-.znaky button{
+.znaky button {
   border: none;
   background: none;
   padding: 0px;
 }
-.error input  {
-  border: 1px solid #CF1322;
+.error input {
+  border: 1px solid #cf1322;
 }
 .error {
-  padding-top:5px;
-  color: #CF1322;
+  padding-top: 5px;
+  color: #cf1322;
 }
+
